rust/ittapi-sys/src/linux/ittnotify_bindings.rs

pub const ___itt_track_group_type___itt_track_group_type_normal: ___itt_track_group_type = 0;
#[doc = " @cond exclude_from_documentation"]
pub type ___itt_track_group_type = ::std::os::raw::c_uint;
#[doc = " @cond exclude_from_documentation"]
pub use self::___itt_track_group_type as __itt_track_group_type;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ___itt_track_group {
    #[doc = "< Name of the track group"]
    pub name: *mut __itt_string_handle,
    #[doc = "< List of child tracks"]
    pub track: *mut ___itt_track,
    #[doc = "< Type of the track group"]
    pub tgtype: __itt_track_group_type,
    #[doc = "< Reserved. Must be zero"]
    pub extra1: ::std::os::raw::c_int,
    #[doc = "< Reserved. Must be zero"]
    pub extra2: *mut ::std::os::raw::c_void,
    pub next: *mut ___itt_track_group,
}
#[test]
fn bindgen_test_layout____itt_track_group() {
    const UNINIT: ::std::mem::MaybeUninit<___itt_track_group> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<___itt_track_group>(),
        40usize,
        concat!("Size of: ", stringify!(___itt_track_group))
    );
    assert_eq!(
        ::std::mem::align_of::<___itt_track_group>(),
        8usize,
        concat!("Alignment of ", stringify!(___itt_track_group))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track_group),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).track) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track_group),
            "::",
            stringify!(track)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tgtype) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track_group),
            "::",
            stringify!(tgtype)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).extra1) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track_group),
            "::",
            stringify!(extra1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).extra2) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track_group),
            "::",
            stringify!(extra2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track_group),
            "::",
            stringify!(next)
        )
    );
}
pub type __itt_track_group = ___itt_track_group;
pub const ___itt_track_type___itt_track_type_normal: ___itt_track_type = 0;
#[doc = " @brief Placeholder for custom track types. Currently, \"normal\" custom track\n is the only available track type."]
pub type ___itt_track_type = ::std::os::raw::c_uint;
#[doc = " @brief Placeholder for custom track types. Currently, \"normal\" custom track\n is the only available track type."]
pub use self::___itt_track_type as __itt_track_type;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ___itt_track {
    #[doc = "< Name of the track group"]
    pub name: *mut __itt_string_handle,
    #[doc = "< Parent group to a track"]
    pub group: *mut __itt_track_group,
    #[doc = "< Type of the track"]
    pub ttype: __itt_track_type,
    #[doc = "< Reserved. Must be zero"]
    pub extra1: ::std::os::raw::c_int,
    #[doc = "< Reserved. Must be zero"]
    pub extra2: *mut ::std::os::raw::c_void,
    pub next: *mut ___itt_track,
}
#[test]
fn bindgen_test_layout____itt_track() {
    const UNINIT: ::std::mem::MaybeUninit<___itt_track> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<___itt_track>(),
        40usize,
        concat!("Size of: ", stringify!(___itt_track))
    );
    assert_eq!(
        ::std::mem::align_of::<___itt_track>(),
        8usize,
        concat!("Alignment of ", stringify!(___itt_track))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).group) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track),
            "::",
            stringify!(group)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ttype) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track),
            "::",
            stringify!(ttype)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).extra1) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track),
            "::",
            stringify!(extra1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).extra2) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track),
            "::",
            stringify!(extra2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(___itt_track),
            "::",
            stringify!(next)
        )
    );
}
pub type __itt_track = ___itt_track;
pub type __itt_track_group_create_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        name: *mut __itt_string_handle,
        track_group_type: __itt_track_group_type,
    ) -> *mut __itt_track_group,
>;
extern "C" {
    pub static mut __itt_track_group_create_ptr__3_0: __itt_track_group_create_ptr__3_0_t;
}
pub type __itt_track_create_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        track_group: *mut __itt_track_group,
        name: *mut __itt_string_handle,
        track_type: __itt_track_type,
    ) -> *mut __itt_track,
>;
extern "C" {
    pub static mut __itt_track_create_ptr__3_0: __itt_track_create_ptr__3_0_t;
}
pub type __itt_set_track_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(track: *mut __itt_track)>;
extern "C" {
    pub static mut __itt_set_track_ptr__3_0: __itt_set_track_ptr__3_0_t;
}
#[doc = " @cond exclude_from_gpa_documentation */\n/**\n @defgroup events Events\n @ingroup public\n Events group\n @{\n/\n/** @brief user event type"]
pub type __itt_event = ::std::os::raw::c_int;
pub type __itt_event_create_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        name: *const ::std::os::raw::c_char,
        namelen: ::std::os::raw::c_int,
    ) -> __itt_event,
>;
extern "C" {
    pub static mut __itt_event_create_ptr__3_0: __itt_event_create_ptr__3_0_t;
}
pub type __itt_event_start_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(event: __itt_event) -> ::std::os::raw::c_int>;
extern "C" {
    pub static mut __itt_event_start_ptr__3_0: __itt_event_start_ptr__3_0_t;
}
pub type __itt_event_end_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(event: __itt_event) -> ::std::os::raw::c_int>;
extern "C" {
    pub static mut __itt_event_end_ptr__3_0: __itt_event_end_ptr__3_0_t;
}
pub type __itt_av_save_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        data: *mut ::std::os::raw::c_void,
        rank: ::std::os::raw::c_int,
        dimensions: *const ::std::os::raw::c_int,
        type_: ::std::os::raw::c_int,
        filePath: *const ::std::os::raw::c_char,
        columnOrder: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub static mut __itt_av_save_ptr__3_0: __itt_av_save_ptr__3_0_t;
}
pub type __itt_enable_attach_ptr__3_0_t = ::std::option::Option<unsafe extern "C" fn()>;
extern "C" {
    pub static mut __itt_enable_attach_ptr__3_0: __itt_enable_attach_ptr__3_0_t;
}
pub type __itt_module_load_ptr__3_0_t = ::std::option::Option<
    unsafe extern "C" fn(
        start_addr: *mut ::std::os::raw::c_void,
        end_addr: *mut ::std::os::raw::c_void,
        path: *const ::std::os::raw::c_char,
    ),
>;
extern "C" {
    pub static mut __itt_module_load_ptr__3_0: __itt_module_load_ptr__3_0_t;
}
pub type __itt_module_unload_ptr__3_0_t =
    ::std::option::Option<unsafe extern "C" fn(addr: *mut ::std::os::raw::c_void)>;
extern "C" {
    pub static mut __itt_module_unload_ptr__3_0: __itt_module_unload_ptr__3_0_t;
}
pub const __itt_module_type___itt_module_type_unknown: __itt_module_type = 0;
pub const __itt_module_type___itt_module_type_elf: __itt_module_type = 1;
pub const __itt_module_type___itt_module_type_coff: __itt_module_type = 2;
#[doc = " @cond exclude_from_documentation"]
pub type __itt_module_type = ::std::os::raw::c_uint;
pub const __itt_section_type_itt_section_type_unknown: __itt_section_type = 0;
pub const __itt_section_type_itt_section_type_bss: __itt_section_type = 1;
pub const __itt_section_type_itt_section_type_data: __itt_section_type = 2;
pub const __itt_section_type_itt_section_type_text: __itt_section_type = 3;
#[doc = " @cond exclude_from_documentation"]
pub type __itt_section_type = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ___itt_section_info {
    #[doc = "< Section name in UTF8"]
    pub name: *const ::std::os::raw::c_char,
    #[doc = "< Section content and semantics description"]
    pub type_: __itt_section_type,
    #[doc = "< Section bit flags that describe attributes using bit mask\n Zero if disabled, non-zero if enabled"]
    pub flags: usize,
    #[doc = "< Section load(relocated) start address"]
    pub start_addr: *mut ::std::os::raw::c_void,
    #[doc = "< Section file offset"]
    pub size: usize,
    #[doc = "< Section size"]
    pub file_offset: usize,
}
